namespace MonsterArena
{
    public static class Constants
    {
        public const string ActiveLevelKey = "_activeLevel";
        public const string CargoKey = "_cargo";
        public const string CargoLevelKey = "_cargoLevel";
        public const string ColorDimKey = "_ColorDim";
        public const string ColorKey = "_Color";
        public const string RadarLevelKey = "_radarLevel";
        public const string CurrentTaskIndexKey = "_currentTaskIndex";
        public const string CurrentTaskKey = "_currentTask";
        public const string DamageLevelKey = "_damageLevel";
        public const string HealthLevelKey = "_healthLevel";
        public const string RegistrationDayKey = "_registrationDay";
        public const string SessionsCountKey = "_sessionsCount";
        public const string SoftSpentsKey = "_softSpents";
        public const string SpeedLevelKey = "_speedLevel";
        public const string WalletCoinsKey = "_walletCoins";

        public const string Ability = "Ability";
        public const string AbilitySpeedMultiplier = "AbilitySpeedMultiplier";
        public const string Alive = "Alive";
        public const string Angle = "_Angle";
        public const string Attack = "Attack";
        public const string AttackSpeedMultiplier = "AttackSpeedMultiplier";
        public const string CircleActive = "_CircleActive";
        public const string Fill = "_Fill";
        public const string Offset = "_Offset";
        public const string Once = "Once";
        public const string OrthographicSize = "_OrthographicSize";
        public const string Radius = "_Radius";
        public const string Speed = "Speed";
        public const string Win = "Win";
    }
}
